Fix structure, appears to be final fix using css page-break-inside:avoid; to stop wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
     columns: 500px;
     column-gap: 1.25rem;
     margin: 1.25rem;
-    row-gap: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
 #header {
